# tfg-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md
rocket/: Cargo.toml
rocket/src/: main.rs
sql/: my_database.sql
src/: main.rs
src/database/: migration.rs  mod.rs  products.rs  stock.rs  tags.rs  users.rs
