[package]
name = "rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
bigdecimal = { version = "0.4.3", features = ["serde"] }
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
lazy_static = "1.4.0"
rocket = { version = "0.5", features = ["json"] }
rocket_cors = "0.6.0"
serde = "1.0.197"
sha2 = "0.10.8"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono", "time", "bigdecimal"] }
thiserror = "1.0.58"
time = "0.3.36"
tokio = { version = "1", features = ["full"] }
